--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     </div>
                 </div>
             </div>
-            <div class="section slide" style="background-color:rgb(30, 30, 30);color:white">
-                <div class="container">
+            <div class="section slide" data-vide-bg="demo">
+                <!-- <div class="container">
                     <div class="row">
                         <div class="col-md-4">
                             <h1>A Chrome Extension</h1><hr />
@@ -47,7 +47,7 @@
                             <img src="" class="img-responsive" style="box-shadow: 5px 5px 5px #A9A9A9;">
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="section slide">
                 <div class="container">
