--- a/index.html
+++ b/index.html
@@ -34,39 +34,41 @@
                     </div>
                 </div>
             </div>
-            <div class="section slide" data-vide-bg="demo">
-                <!-- <div class="container">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <h1>A Chrome Extension</h1><hr />
-                            <h3>Politik works in the background, using 100% anonymous data collected from users, to determine candidates in the 2016 election that represent the majority of viewers of a web page</h3><br />
-
-                            <h3>Politik is meant to help apolitical people find interest in politics by relating them to their peers, using web articles as the medium of interaction</h3>
-                        </div>
-                        <div class="col-md-8">
-                            <img src="" class="img-responsive" style="box-shadow: 5px 5px 5px #A9A9A9;">
-                        </div>
-                    </div>
-                </div> -->
-            </div>
-            <div class="section slide">
+            <div class="section slide" data-vide-bg="demo"></div>
+            <div class="section slide" style="background-color:rgb(30, 30, 30);color:white">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-4">
-                            <h3>Politik has two user groups, <span class="label label-primary">core</span> users and <span class="label label-info">fringe</span> users.</h3><hr/>
-                            <h4>Core users influence the political diaspora of fringe websites</h4><br/>
-                            <h4>Fringe users content is displayed based off the leaning of a webpages viewers</h4>
-                        </div>
-                        <div class="col-lg-4">
-                            <canvas id="radarChart" width="400" height="400"></canvas>
-                        </div>
-                        <div class="col-lg-4">
-                            <h3>Efficient - Front to Back</h3><hr/>
-                            <h4>Usability drives Politik's minimalist interface</h4><br />
-                            <h4>Machine Learning &amp; NLP power our content decision engine</h4>
+                        <h1>A Chrome Extension</h1><hr />
+                        <h3>inquiry is injected into the YouTube page to enhance your viewing experience</h3>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-10 col-md-offset-1">
+                            <img src="deployment.jpg" class="img-responsive" style="box-shadow: 5px 5px 5px #505050;">
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="section slide" style="background-color:rgb(30, 30, 30);color:white">
+                <div class="container">
+                    <div class="row">
+                        <h1 class="slide-header">Tech Stack</h1>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h1>YouTube API</h1>
+                            <h1>Clarafai</h1>
+                            <h1>Tesseract OCR</h1>
+                            <h1>Chrome Content Scripts</h1>
+                        </div>
+                        <div class="col-md-6">
+                            <h1>Scala + Play</h1>
+                            <h1>PostgreSQL</h1>
+                            <h1>Javascript</h1>
+                            <h1>Python</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
