--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
             </div>
-            <div class="section slide" data-vide-bg="demo"></div>
+            <div class="section slide" data-vide-bg="demo" data-vide-options="muted: true"></div>
             <div class="section slide" style="background-color:rgb(30, 30, 30);color:white">
                 <div class="container">
                     <div class="row">
