--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
                     </div>
                 </div>
             </div>
+            <div class="section slide" style="background-color:rgb(30, 30, 30);color:white">
+                <div class="container">
+                    <div class="row">
+                        <h1 class="slide-header"><a href="https://chrome.google.com/webstore/detail/inquiry/kpgbkojbhpbpbdlpmblifglgpeachelg">Download</a></h1>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
