--- a/index.html
+++ b/index.html
@@ -35,40 +35,40 @@
                 </div>
             </div>
             <div class="section slide" data-vide-bg="demo" data-vide-options="muted: true"></div>
-            <div class="section slide" style="background-color:rgb(30, 30, 30);color:white">
-                <div class="container">
-                    <div class="row">
-                        <h1>A Chrome Extension</h1><hr />
-                        <h3>inquiry is injected into the YouTube page to enhance your viewing experience</h3>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-10 col-md-offset-1">
-                            <img src="deployment.jpg" class="img-responsive" style="box-shadow: 5px 5px 5px #505050;">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="section slide" style="background-color:rgb(30, 30, 30);color:white">
-                <div class="container">
-                    <div class="row">
-                        <h1 class="slide-header">Tech Stack</h1>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h1>YouTube API</h1>
-                            <h1>Clarafai</h1>
-                            <h1>Tesseract OCR</h1>
-                            <h1>Chrome Content Scripts</h1>
-                        </div>
-                        <div class="col-md-6">
-                            <h1>Scala + Play</h1>
-                            <h1>PostgreSQL</h1>
-                            <h1>Javascript</h1>
-                            <h1>Python</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <!--<div class="section slide" style="background-color:rgb(30, 30, 30);color:white">-->
+            <!--    <div class="container">-->
+            <!--        <div class="row">-->
+            <!--            <h1>A Chrome Extension</h1><hr />-->
+            <!--            <h3>inquiry is injected into the YouTube page to enhance your viewing experience</h3>-->
+            <!--        </div>-->
+            <!--        <div class="row">-->
+            <!--            <div class="col-md-10 col-md-offset-1">-->
+            <!--                <img src="deployment.jpg" class="img-responsive" style="box-shadow: 5px 5px 5px #505050;">-->
+            <!--            </div>-->
+            <!--        </div>-->
+            <!--    </div>-->
+            <!--</div>-->
+            <!--<div class="section slide" style="background-color:rgb(30, 30, 30);color:white">-->
+            <!--    <div class="container">-->
+            <!--        <div class="row">-->
+            <!--            <h1 class="slide-header">Tech Stack</h1>-->
+            <!--        </div>-->
+            <!--        <div class="row">-->
+            <!--            <div class="col-md-6">-->
+            <!--                <h1>YouTube API</h1>-->
+            <!--                <h1>Clarafai</h1>-->
+            <!--                <h1>Tesseract OCR</h1>-->
+            <!--                <h1>Chrome Content Scripts</h1>-->
+            <!--            </div>-->
+            <!--            <div class="col-md-6">-->
+            <!--                <h1>Scala + Play</h1>-->
+            <!--                <h1>PostgreSQL</h1>-->
+            <!--                <h1>Javascript</h1>-->
+            <!--                <h1>Python</h1>-->
+            <!--            </div>-->
+            <!--        </div>-->
+            <!--    </div>-->
+            <!--</div>-->
             <div class="section slide" style="background-color:rgb(30, 30, 30);color:white">
                 <div class="container">
                     <div class="row">
